--- a/Buoi05/style.css
+++ b/Buoi05/style.css
@@ -8,7 +8,6 @@ body{
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
 }
 .container{
     width: 100%;
@@ -77,9 +76,14 @@ p{
     margin-top: 20px;
     width: 100px;
     height: 33px;
-    background-color: cornflowerblue;
     color: white;
     border: none;
     border-radius: 10px;
     cursor: pointer;
+}
+#red{
+    background-color: red;
+}
+#green{
+    background-color: green;
 }
